Refactor all geo scalars to new function registry